debug for getBestPlayers per SECOND